tests/sksl/errors/ReservedNameInterface.glsl
### Compilation failed:

error: 1: name 'interface' is reserved
int interface;
    ^^^^^^^^^
1 error
